--- a/templates/team.html
+++ b/templates/team.html
@@ -18,11 +18,11 @@
                                 <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="static/assets/img/photo-1590670795776-6c7d1450ae46.jpg" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
                             </div>
                             <div class="col-9 col-md-5">
-                                <h3>Web Developer</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
+                                <h3>Robert F.</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
                             </div>
                             <div class="col-md-6"><span class="text-muted period">10/2013 - 04/2015</span></div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+                        <p>Computer Science student who is passionate about the fascinating realm of AI, particularly its applications in synthesizing images, voices, and responding to prompts. Experience includes: Java, Python, Android Studio, Google ML Kit, scikit-learn and more.</p>
                     </div><!-- End: Teammate -->
                     <!-- Start: Teammate -->
                     <div class="item">
@@ -31,11 +31,11 @@
                                 <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="static/assets/img/photo-1590670795776-6c7d1450ae46.jpg" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
                             </div>
                             <div class="col-9 col-md-5">
-                                <h3>Kamron Hopkins</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
+                                <h3>Kamron H.</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
                             </div>
                             <div class="col-md-6"><span class="text-muted period">10/2013 - 04/2015</span></div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+                        <p>Passionate about creating user-friendly software, with skills in Swift, Java, Python, HTML5/CSS, and AI. Continuously learning new programming languages and tech stacks for personal projects and academic pursuits.</p>
                     </div><!-- End: Teammate -->
                     <!-- Start: Teammate -->
                     <div class="item">
@@ -44,11 +44,11 @@
                                 <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="static/assets/img/photo-1590670795776-6c7d1450ae46.jpg" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
                             </div>
                             <div class="col-9 col-md-5">
-                                <h3>Web Developer</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
+                                <h3>Mehki C.</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
                             </div>
                             <div class="col-md-6"><span class="text-muted period">10/2013 - 04/2015</span></div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+                        <p>>Majoring in computer science and graduating in May. Have experience with Python, Java, HTML/CSS, and plan on using these skills to build create new projects.</p>
                     </div><!-- End: Teammate -->
                 </div>
                 <div class="education group"></div>
@@ -61,11 +61,11 @@
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="visually-hidden">100%</span></div>
                                 </div>
-                                <h3>PHP</h3>
+                                <h3>JQuery</h3>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="visually-hidden">90%</span></div>
                                 </div>
-                                <h3>JavaScript</h3>
+                                <h3>Python</h3>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="visually-hidden">80%</span></div>
                                 </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="hobbies group">
                     <div class="heading"></div>
-                    <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras risus ligula, iaculis ut metus sit amet, luctus pharetra mauris. Aliquam purus felis, pretium vel pretium vitae, dapibus sodales ante. Suspendisse potenti. Duis nunc eros.</p>
+                    <p class="text-center text-muted">Good leadership requires you to surround yourself with people of diverse perspectives who can disagree with you without fear of retaliation.</p>
                 </div>
             </div>
         </section>
