Update team member photos and fix typo
The team member photos from local static files have been replaced with images sourced from Unsplash. Also, corrected a minor typographical error in Mehki's bio.

--- a/templates/team.html
+++ b/templates/team.html
@@ -15,7 +15,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-3 col-sm-2 col-md-1">
-                                <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="static/assets/img/photo-1590670795776-6c7d1450ae46.jpg" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
+                                <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?q=80&w=2043&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
                             </div>
                             <div class="col-9 col-md-5">
                                 <h3>Robert F.</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
@@ -28,7 +28,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-3 col-sm-2 col-md-1">
-                                <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="static/assets/img/photo-1590670795776-6c7d1450ae46.jpg" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
+                                <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="https://images.unsplash.com/photo-1498100152307-ce63fd6c5424?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
                             </div>
                             <div class="col-9 col-md-5">
                                 <h3>Kamron H.</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
@@ -41,14 +41,14 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-3 col-sm-2 col-md-1">
-                                <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="static/assets/img/photo-1590670795776-6c7d1450ae46.jpg" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
+                                <picture style="width: 50px;height: 50px;border-radius: 50%;"><img alt="man in white crew neck shirt" src="https://images.unsplash.com/photo-1618189063538-57c32befeb38?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 50px;height: 50px;border-radius: 50%;"></picture>
                             </div>
                             <div class="col-9 col-md-5">
                                 <h3>Mehki C.</h3><span class="badge rounded-pill bg-primary">E.C.U.</span>
                             </div>
                             <div class="col-md-6"><span class="text-muted period">10/2013 - 04/2015</span></div>
                         </div>
-                        <p>>Majoring in computer science and graduating in May. Have experience with Python, Java, HTML/CSS, and plan on using these skills to build create new projects.</p>
+                        <p>Majoring in computer science and graduating in May. Have experience with Python, Java, HTML/CSS, and plan on using these skills to build create new projects.</p>
                     </div><!-- End: Teammate -->
                 </div>
                 <div class="education group"></div>
