Add comprehensive ReadMe and update webpage content
The ReadMe.md file has been added, providing detailed project information, installation steps and usage guide. Updated the content of index.html to deliver more relevant and accurate information about vampires and the purpose of the 'Vampire Bloodline' app.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <div class="container">
                 <div class="avatar" style="background-image: url(&quot;static/assets/img/photo-1544244688-4165905762c1.jpg&quot;);"></div>
                 <div class="about-me">
-                    <p style="font-family: 'Beth Ellen', serif;">Welcome to the sancuary of the living-dead. Many have been biten but few have been chosen. Take our Vampire Bloodline test today.</p><a class="btn btn-outline-primary" role="button" href="/vamp_test">Test Me Now !</a>
+                    <p class="mb-3" style="font-family: 'Beth Ellen', serif;">Welcome to the sancuary of the living-dead. Many have been bitten but few have been chosen. Take our Vampire Bloodline test today.</p><a class="btn btn-outline-primary" role="button" href="/vamp_test">Test Me Now !</a>
                 </div>
             </div>
         </section>
@@ -24,7 +24,7 @@
         <section class="portfolio-block call-to-action border-bottom">
             <div class="container">
                 <div class="d-flex justify-content-center align-items-center content">
-                    <h3 class="text-center" style="font-family: 'Beth Ellen', serif;">Have you been visited by a spirit of the night?</h3><a class="btn btn-outline-primary btn-lg" role="button" href="/vamp_test">See If You've Been Chosen...</a>
+                    <h3 class="text-center mb-3" style="font-family: 'Beth Ellen', serif;">Have you been visited by a spirit of the night?</h3><a class="btn btn-outline-primary btn-lg mb-3" role="button" href="/vamp_test">See If You've Been Chosen...</a>
                 </div>
             </div>
         </section>
@@ -40,7 +40,7 @@
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-stopwatch" style="background-color: black;"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title">Can Live Forever</h3>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <p class="card-text">Eternal life offers vampires the chance to witness centuries unfold, accumulating vast knowledge and shaping history. Immortality provides endless opportunities to refine their talents and deepen their understanding of the world.</p>
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-body" style="background-color: black;"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title">Supernatural Strength</h3>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <p class="card-text">Vampiric strength surpasses human limits, empowering them to overpower enemies and perform extraordinary feats. This strength is both a weapon and a tool for protection, instilling fear and commanding respect in the supernatural and human realms.</p>
                             </div>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                             <div class="card-header bg-transparent border-0"><i class="icon ion-eye" style="background-color: black;"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title">Night Vision</h3>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <p class="card-text">A vampire's night vision allows them to see clearly in the dark, transforming night into an ally. This ability enhances their hunting prowess, giving them a strategic advantage over their prey and connecting them more deeply to the nocturnal world.</p>
                             </div>
                         </div>
                     </div>
@@ -71,12 +71,13 @@
             <div class="row align-items-center">
                 <div class="col-md-12 col-lg-5 offset-lg-1 text">
                     <h3>Our Purpose:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efr nunc, vivamus vel accumsan dui. Quisque ac dolor cursus, volutpat nisl vel, porttitor eros.</p>
+                    <p>Is to provide a safe haven for those who have been chosen by the night. We offer a variety of services to help you navigate your new life as a vampire. We offer a variety of services to help you navigate your new life as a vampire. We offer a variety of services to help you navigate your new life as a vampire.</p><a class="btn btn-outline-light" role="button" href="/vamp_test">Take the Test</a>
+
                 </div>
                 <div class="col-md-12 col-lg-5">
                     <div class="portfolio-laptop-mockup">
                         <div class="screen">
-                            <div class="screen-content" style="background-image:url(&quot;static/assets/img/tech/image6.png&quot;);"></div>
+                            <div class="screen-content" style="background-image:url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.historicmysteries.com%2Fwp-content%2Fuploads%2F2016%2F10%2FDracula.jpg&f=1&nofb=1&ipt=01a6942823bb27a98f2dbb6c9bbfb5a0d8e3643579417496f90de51aac04d5a7&ipo=images);"></div>
                         </div>
                         <div class="keyboard"></div>
                     </div>
